--- a/app/src/main/res/layout/writerecipe.xml
+++ b/app/src/main/res/layout/writerecipe.xml
@@ -61,12 +61,30 @@
 
   </LinearLayout>
 
+
+  <LinearLayout
+      android:id="@+id/writelinear"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+  </LinearLayout>
+<!--
+  <View
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_weight="1"/>
+-->
+
+  <!--글자색을 흰색으로 변경-->
   <TextView
       android:id="@+id/ingredient_textview"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textStyle="bold"
-      android:padding="8dp"/>
+      android:padding="8dp"
+
+      />
+
 
   <EditText
       android:id="@+id/recipe_titile"
