--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/email"
+        android:textColor="@color/black"
         android:layout_marginTop="200dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp" />
@@ -29,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password"
+        android:textColor="@color/black"
         android:layout_centerInParent="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"/>
@@ -50,19 +52,23 @@
         <Button
             android:id="@+id/btn_signUp"
             android:text="SIGNUP"
+            android:textColor="@color/black"
             android:onClick="signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@color/background"
             android:layout_marginLeft="50dp"/>
 
         <Button
             android:id="@+id/btn_signIn"
             android:text="LOGIN"
+            android:textColor="@color/black"
             android:onClick="signIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@color/background"
             android:layout_marginRight="50dp"/>
 
     </LinearLayout>
