--- a/app/src/main/res/layout/mypocket.xml
+++ b/app/src/main/res/layout/mypocket.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MENU"
+        android:background="@color/background"
+        android:textColor="@color/black"
         android:onClick="toMainmenu"/>
 
     <LinearLayout
@@ -33,7 +35,8 @@
             android:id="@+id/btn_ingredient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="save"
+            android:text="SAVE"
+            android:background="@color/background"
             android:onClick="clicksave"/>
 
     </LinearLayout>
