--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="pocket">#fed7eb</color>
+    <color name="search">#d4d7fb</color>
+    <color name="add">#ffd8fa</color>
+    <color name="background">#ffc3f7</color>
+    <color name="text">#a3cfff</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="write">#b8b6f8</color>
 </resources>
