--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="write">#b8b6f8</color>
+    <color name="list">#bcf7ea</color>
 </resources>
