need to change DB

--- a/app/src/main/res/layout/addrecipe.xml
+++ b/app/src/main/res/layout/addrecipe.xml
@@ -38,6 +38,13 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/somenaillayout">
+
+
     <TextView
         android:id="@+id/somenail"
         android:layout_marginTop="10dp"
@@ -46,7 +53,7 @@
         android:textSize="40dp"
         android:textColor="@color/black"
         />
-
+</LinearLayout>
 
 
 
