--- a/app/src/main/res/layout/writerecipe.xml
+++ b/app/src/main/res/layout/writerecipe.xml
@@ -1,4 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <Button
+        android:background="@color/background"
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:nestedScrollingEnabled="true"
+        android:onClick="toAddrecipe"
+        android:text="BACK" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+
+    <Button
+        android:background="@color/background"
+        android:id="@+id/btn_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:nestedScrollingEnabled="false"
+        android:onClick="edit"
+        android:text="UPDATE" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+
+    <Button
+        android:background="@color/background"
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:nestedScrollingEnabled="true"
+        android:onClick="save"
+        android:text="SAVE" />
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="식재료"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editTextIngredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="text"/>
+
+    <Button
+        android:text="ADD"
+        android:background="@color/background"
+        android:id="@+id/btn_addingredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="제목 "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editTextTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="text"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="내용 "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editTextContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="text"/>
+
+  </LinearLayout>
+
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="제목 "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/editTextWriter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="text"/>
+
+  </LinearLayout>
+
+  <ImageView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/photo"/>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    <Button
+        android:background="@color/background"
+        android:id="@+id/btn_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이미지" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:background="@color/background"
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="삭제" />
+
+  </LinearLayout>
+
+
+</LinearLayout>
+
+-->
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -24,6 +227,22 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         />
+<!--
+    <Button
+        android:id="@+id/btn_updaterecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="UPDATE"
+        android:onClick="saveRecipe"
+        android:background="@color/background"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+
+-->
     <Button
         android:id="@+id/btn_saverecipe"
         android:layout_width="wrap_content"
@@ -31,9 +250,11 @@
         android:layout_gravity="right"
         android:text="SAVE"
         android:onClick="saveRecipe"
-
         android:background="@color/background"/>
+
         <!--android:onClick="saveRecipe"-->
+
+
 
     <!--레시피 저장 버튼-->
 
@@ -74,15 +295,12 @@
       android:layout_height="wrap_content"
       android:orientation="horizontal">
   </LinearLayout>
-<!--
-  <View
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:layout_weight="1"/>
--->
+
+
 
   <!--글자색을 흰색으로 변경-->
-  <TextView
+
+<TextView
       android:id="@+id/ingredient_textview"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -90,7 +308,7 @@
       android:background="@color/white"
       android:textColor="@color/white"
       android:padding="8dp"/>
-      <!--android:background="@color/white"-->
+
 
 
 
@@ -109,7 +327,7 @@
       android:background="@color/white"
       android:textColor="@color/white"
       android:padding="8dp"/>
-  <!--android:background="@color/white"-->
+
 
   <EditText
       android:background="@color/write"
